[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/PickableObject.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 18.3755

[sub_resource type="CircleShape2D" id=2]
radius = 19.0106

[node name="PickableObject" type="RigidBody2D"]
z_index = 2
input_pickable = true
mass = 2.0
gravity_scale = 4.9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_GameObject_input_event"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
